Changes to Version 2.0-11

    o  dataEllipse() now allows combination of add=FALSE and plot.points=FALSE (suggested by Michael Friendly, with contributed code).

	o  ellipse(), confidenceEllipse(), and dataEllipse() return coordinates invisibly (suggested by Michael Friendly, with contributed code).
	
	o  fixed bug in printed representation of hypotheses with numbers starting with "-1" or "+1" (e.g., "-10") by linearHypothesis() (reported by Vincent Arel-Bundock).
	
	o  local version of fixef() to avoid lme4/nlme conflicts that surfaced in some situations with Anova().
	
	o  changed order of columns in ANOVA tables for mixed models to make them consistent with other models.

Changes to Version 2.0-10

    o  changed tukeyNonaddTest to be sure the test exists.

    o  changed the default in residualPlots for AsIs from FALSE to TRUE.
    
    o  improved color choice in scatterplot and scatterplotMatrix (at suggestion of Dan Putler).
    
    o  moved up ... argument in qqPlot.default (suggestion of Peter Ehlers).
    
    o  changed label on marginal model plot for generalized linear models verses fitted values to 'fitted values' rather than the incorrect 'Linear predictor"

    o  mmp now passes graphical parameters to par

    o  mmps now works correctly with 'gam' models (mgcv package)
    
    o  modified bootCase to work with multivariate lm objects
    
    
Changes to Version 2.0-9

	o  added Anova and linearHypothesis methods for mixed-effects model objects created by lmer in lme4 and lme in nlme.
	
	o  added matchCoefs, convenience function to use with linearHypothesis.

    o  scatterplot makes parallel boxplots, calling Boxplot, when x is a factor.
    
    o  mmps (marginal model plots) works better with multidimensional terms like splines and polynomials, and permits plotting against terms in the data frame but not in the model formula.  AsIs argument removed.
    
    o  residualPlots handles matrix-predictors similarly to mmps, above.
    