@@ -13,29 +13,32 @@
 }
 
 \usage{
-avPlots(model, terms= ~ ., intercept=FALSE, layout=NULL, ask, main, ...)
+avPlots(model, terms=~., intercept=FALSE, layout=NULL, ask, main, ...)
 
 avp(...)
 
 avPlot(model, ...)
 
 \method{avPlot}{lm}(model, variable,
-    id.method = list(abs(residuals(model, type="pearson")), "x"),
-    labels, 
-    id.n= if(id.method[1]=="identify") Inf else 0,
-    id.cex=1, id.col=palette()[1],
-    col = palette()[1], col.lines = palette()[2],
-    xlab, ylab, pch = 1, lwd = 2, 
-    main="Added-variable Plot", grid=TRUE, ...)
+	id.method = list(abs(residuals(model, type="pearson")), "x"),
+	labels, 
+	id.n = if(id.method[1]=="identify") Inf else 0,
+	id.cex=1, id.col=palette()[1],
+	col = palette()[1], col.lines = palette()[2],
+	xlab, ylab, pch = 1, lwd = 2, 
+	main=paste("Added-Variable Plot:", variable),
+	grid=TRUE,
+	ellipse=FALSE, ellipse.args=NULL, ...)
 
 \method{avPlot}{glm}(model, variable, 
-    id.method = list(abs(residuals(model, type="pearson")), "x"),
-    labels,
-    id.n=if(id.method[1]=="identify") Inf else 0,
-    id.cex=1, id.col=palette()[1], 
-    col = palette()[1], col.lines = palette()[2],
-    xlab, ylab, pch = 1, lwd = 2,  type=c("Wang", "Weisberg"), 
-    main="Added-variable Plot", grid=TRUE, ...)
+	id.method = list(abs(residuals(model, type="pearson")), "x"),
+	labels,
+	id.n = if(id.method[1]=="identify") Inf else 0,
+	id.cex=1, id.col=palette()[1], 
+	col = palette()[1], col.lines = palette()[2],
+	xlab, ylab, pch = 1, lwd = 2,  type=c("Wang", "Weisberg"), 
+	main=paste("Added-Variable Plot:", variable), grid=TRUE,
+	ellipse=FALSE, ellipse.args=NULL, ...)
 }
 \arguments{
   \item{model}{model object produced by \code{lm} or \code{glm}.
@@ -72,13 +75,16 @@ added-variable plot is drawn for that term only.
   \item{pch}{plotting character for points; default is \code{1} 
     (a circle, see \code{\link[graphics]{par}}).}
   \item{lwd}{line width; default is \code{2} (see \code{\link[graphics]{par}}).}
-\item{xlab}{x-axis label.  If omitted a label will be constructed.}
-\item{ylab}{y-axis label.  If omitted a label will be constructed.}
+  \item{xlab}{x-axis label.  If omitted a label will be constructed.}
+  \item{ylab}{y-axis label.  If omitted a label will be constructed.}
   \item{type}{if \code{"Wang"} use the method of Wang (1985);
     if \code{"Weisberg"} use the method in the Arc software associated with
-    Cook and Weisberg (1999)}
-\item{grid}{If TRUE, the default, a light-gray background grid is put on the
-graph}
+    Cook and Weisberg (1999).}
+  \item{grid}{If \code{TRUE}, the default, a light-gray background grid is put on the graph.}
+  \item{ellipse}{If \code{TRUE}, plot a concentration ellipse; default is \code{FALSE}.}
+  \item{ellipse.args}{Arguments to pass to the \code{link{dataEllipse}} function, in the form of a list
+    with named elements; e.g., \code{ellipse.args=list(robust=TRUE))} will cause the ellipse to be plotted using
+    a robust covariance-matrix.}
 }
 
 \details{
@@ -87,8 +93,8 @@ graph}
 }
 
 \value{
-  \code{NULL}. These functions are used for their side effect: producing
-  plots.
+  These functions are used for their side effect id producing
+  plots, but also invisibly return the coordinates of the plotted points.
 }
 
 \references{
@@ -111,7 +117,7 @@ graph}
 
 \author{John Fox \email{jfox@mcmaster.ca}, Sanford Weisberg \email{sandy@umn.edu}}
 
-\seealso{\code{\link{residualPlots}}, \code{\link{crPlots}}, \code{\link{ceresPlots}},
+\seealso{\code{\link{residualPlots}}, \code{\link{crPlots}}, \code{\link{ceresPlots}}, \code{link{dataEllipse}}
 % \code{\link{leveragePlots}}
 }
 
